# cbor

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.cargo/: config
.github/workflows/: clippy.yml  conventional-commits.yml  format.yml  test.yml
examples/: dagcbor.rs  json2cbor-stringref.rs  json2cbor.rs  readme.rs  tags.rs  test.cbor
serde_cbor/: .gitignore  Cargo.toml  README.md
serde_cbor/src/: lib.rs
serde_cbor/tests/: std_types.rs  value.rs
src/: codec.rs  de.rs  error.rs  lib.rs  macros.rs  read.rs  ser.rs  tag.rs  tagged.rs  tags.rs  tagstore.rs  value.rs  write.rs
src/cbor/: Cargo.toml
src/cbor/src/: deserialize.rs  encoding.rs  error.rs  lib.rs  serialize.rs  serialize_test.rs  test_utils.rs
src/cbor/src/deserialize/: numbers.rs  peek.rs  proptest_test.rs
src/cbor/src/deserialize/peek/: array.rs  array_test.rs  numbers.rs  numbers_test.rs  simple.rs  simple_test.rs  tag.rs  tag_test.rs  text.rs  text_test.rs
src/cbor/src/encoding/: major_type.rs  minor_type.rs
src/cbor/src/serialize/: owned.rs  values.rs  values_test.rs  write.rs
src/cbor/src/serialize/owned/: array.rs  array_test.rs  bytes.rs  bytes_test.rs  map.rs  map_test.rs  numbers.rs  numbers_test.rs  simple.rs  simple_test.rs  tag.rs  tag_test.rs  text.rs  text_test.rs
src/cbor/src/serialize/values/: array.rs  array_test.rs  bytes.rs  bytes_test.rs  map.rs  map_test.rs  numbers.rs  numbers_test.rs  simple.rs  simple_test.rs  tag.rs  tag_test.rs  text.rs  text_test.rs
src/cddl/: Cargo.toml
src/cddl/src/: cddl.pest  cddl.rs  main.rs
src/cddl/src/cddl/: error.rs  parser.rs  ruleset.rs
src/cddl/src/formats/: debug.rs
src/serde_cbor/: Cargo.toml
src/serde_cbor/examples/: ferris.cbor
src/serde_cbor/src/: de.rs  lib.rs
src/value/: convert.rs  de.rs  mod.rs  order.rs  raw.rs  ser.rs  value.rs
tests/: bennofs.rs  canonical.rs  codec.rs  convert.rs  de.rs  enum.rs  macros.rs  raw.rs  roundtrip.rs  ser.rs  std_types.rs  stringref.rs  tags.rs  value.rs
