[package]
name = "serde_cbor"
version = "0.11.2"
authors = [
    "Pyfisch <pyfisch@posteo.org>",
    "Steven Fackler <sfackler@gmail.com>"]
repository = "https://github.com/pyfisch/cbor"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "CBOR support for serde."
keywords = ["serde", "cbor", "serialization", "no_std"]
categories = ["encoding"]
edition = "2018"

[badges]
travis-ci = { repository = "pyfisch/cbor" }
maintenance = { status = "as-is" }

[dependencies]
half = "1.2.0"
serde = { version = "1.0.14", default-features = false }
tokio-util = { version = "0.3", optional = true }
bytes = { version = "0.5", optional = true }

[dev-dependencies]
serde_derive = { version = "1.0.14", default-features = false }

[features]
default = ["std"]
# Uses `alloc` library and adds support for vector functions with
# `no_std`.
alloc = ["serde/alloc"]
std = ["serde/std" ]
unsealed_read_write = []
tags = []
codec = ["tokio-util/codec", "bytes"]
